<resources>
    <string name="app_name">ParseTutorial</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="upload_object">Upload Object</string>
    <string name="query_object">Query one</string>
    <string name="query_all_objects">Query All</string>
    <string name="update_object">Update one</string>
    <string name="delete_object">Delete one</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_acl">Upload with ACL</string>

    <!-- hint area -->
    <string name="hint_username">USER NAME</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_email">E-MAIL</string>
    <string name="hint_display_name">NICKNAME</string>
</resources>
