<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/btn_upload_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_object"/>
        <Button
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query"/>
        <Button
            android:id="@+id/btn_upload_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_file"/>

        <Button
            android:id="@+id/btn_upload_acl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_acl"/>
    </LinearLayout>
</ScrollView>
